<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.projectthree.MainActivity">

    <!--The LinearLayout view contains all view groups.-->
    <LinearLayout style="@style/OutermostLayerLinearLayout">

        <!--The topping of single choice.-->
        <TextView
            style="@style/Topping"
            android:text="@string/part_1_single_choice" />

        <!--The question_1 and answer radio_button group.-->
        <RelativeLayout style="@style/RelativeLayout">

            <ImageView
                android:id="@+id/question_1_wrong_icon"
                style="@style/WrongIcon"
                android:contentDescription="@string/icon_description" />

            <TextView
                android:id="@+id/question_1"
                style="@style/Question"
                android:layout_alignLeft="@id/question_1_wrong_icon"
                android:layout_alignStart="@id/question_1_wrong_icon"
                android:text="@string/question_1" />
        </RelativeLayout>

        <RadioGroup style="@style/SingleRowRadioGroup">

            <RadioButton
                android:id="@+id/radio_button_1_1"
                style="@style/RadioButton_1"
                android:onClick="onClickSingleChoice"
                android:text="@string/answer_group_1_1" />

            <RadioButton
                android:id="@+id/radio_button_1_2"
                style="@style/RadioButton"
                android:onClick="onClickSingleChoice"
                android:text="@string/answer_group_1_2" />

            <RadioButton
                android:id="@+id/radio_button_1_3"
                style="@style/RadioButton"
                android:onClick="onClickSingleChoice"
                android:text="@string/answer_group_1_3" />

            <RadioButton
                android:id="@+id/radio_button_1_4"
                style="@style/RadioButton"
                android:onClick="onClickSingleChoice"
                android:text="@string/answer_group_1_4" />
        </RadioGroup>

        <!--The question_2 and radio_button answer group.-->
        <RelativeLayout style="@style/RelativeLayout">

            <ImageView
                android:id="@+id/question_2_wrong_icon"
                style="@style/WrongIcon"
                android:contentDescription="@string/icon_description" />

            <TextView
                android:id="@+id/question_2"
                style="@style/Question"
                android:layout_alignLeft="@id/question_2_wrong_icon"
                android:layout_alignStart="@id/question_2_wrong_icon"
                android:text="@string/question_2" />
        </RelativeLayout>

        <RadioGroup style="@style/SingleRowRadioGroup">

            <RadioButton
                android:id="@+id/radio_button_2_1"
                style="@style/RadioButton_1"
                android:onClick="onClickSingleChoice"
                android:text="@string/answer_group_2_1" />

            <RadioButton
                android:id="@+id/radio_button_2_2"
                style="@style/RadioButton"
                android:onClick="onClickSingleChoice"
                android:text="@string/answer_group_2_2" />

            <RadioButton
                android:id="@+id/radio_button_2_3"
                style="@style/RadioButton"
                android:onClick="onClickSingleChoice"
                android:text="@string/answer_group_2_3" />

            <RadioButton
                android:id="@+id/radio_button_2_4"
                style="@style/RadioButton"
                android:onClick="onClickSingleChoice"
                android:text="@string/answer_group_2_4" />
        </RadioGroup>

        <!--The question_3 and radio_button answer group.-->
        <RelativeLayout style="@style/RelativeLayout">

            <ImageView
                android:id="@+id/question_3_wrong_icon"
                style="@style/WrongIcon"
                android:contentDescription="@string/icon_description" />

            <TextView
                android:id="@+id/question_3"
                style="@style/Question"
                android:layout_alignLeft="@id/question_3_wrong_icon"
                android:layout_alignStart="@id/question_3_wrong_icon"
                android:text="@string/question_3" />
        </RelativeLayout>

        <com.example.android.projectthree.MultiRowsRadioGroup style="@style/MultiRowsRadioGroup">

            <LinearLayout style="@style/LinearLayoutInRadioGroup">

                <RadioButton
                    android:id="@+id/radio_button_3_1"
                    style="@style/RadioButton_1"
                    android:onClick="onClickSingleChoice"
                    android:text="@string/answer_group_3_1" />

                <RadioButton
                    android:id="@+id/radio_button_3_2"
                    style="@style/RadioButton"
                    android:onClick="onClickSingleChoice"
                    android:text="@string/answer_group_3_2" />
            </LinearLayout>

            <LinearLayout style="@style/LinearLayoutInRadioGroup">

                <RadioButton
                    android:id="@+id/radio_button_3_3"
                    style="@style/RadioButton_1"
                    android:onClick="onClickSingleChoice"
                    android:text="@string/answer_group_3_3" />

                <RadioButton
                    android:id="@+id/radio_button_3_4"
                    style="@style/RadioButton"
                    android:onClick="onClickSingleChoice"
                    android:text="@string/answer_group_3_4" />
            </LinearLayout>
        </com.example.android.projectthree.MultiRowsRadioGroup>

        <!--The question_4 and radio_button answer group.-->
        <RelativeLayout style="@style/RelativeLayout">

            <ImageView
                android:id="@+id/question_4_wrong_icon"
                style="@style/WrongIcon"
                android:contentDescription="@string/icon_description" />

            <TextView
                android:id="@+id/question_4"
                style="@style/Question"
                android:layout_alignLeft="@id/question_4_wrong_icon"
                android:layout_alignStart="@id/question_4_wrong_icon"
                android:text="@string/question_4" />
        </RelativeLayout>

        <RadioGroup style="@style/SingleRowRadioGroup">

            <RadioButton
                android:id="@+id/radio_button_4_1"
                style="@style/RadioButton_1"
                android:onClick="onClickSingleChoice"
                android:text="@string/answer_group_4_1" />

            <RadioButton
                android:id="@+id/radio_button_4_2"
                style="@style/RadioButton"
                android:onClick="onClickSingleChoice"
                android:text="@string/answer_group_4_2" />

            <RadioButton
                android:id="@+id/radio_button_4_3"
                style="@style/RadioButton"
                android:onClick="onClickSingleChoice"
                android:text="@string/answer_group_4_3" />

            <RadioButton
                android:id="@+id/radio_button_4_4"
                style="@style/RadioButton"
                android:onClick="onClickSingleChoice"
                android:text="@string/answer_group_4_4" />
        </RadioGroup>

        <!--The question_5 and radio_button answer group.-->
        <RelativeLayout style="@style/RelativeLayout">

            <ImageView
                android:id="@+id/question_5_wrong_icon"
                style="@style/WrongIcon"
                android:contentDescription="@string/icon_description" />

            <TextView
                android:id="@+id/question_5"
                style="@style/Question"
                android:layout_alignLeft="@id/question_5_wrong_icon"
                android:layout_alignStart="@id/question_5_wrong_icon"
                android:text="@string/question_5" />
        </RelativeLayout>

        <com.example.android.projectthree.MultiRowsRadioGroup style="@style/MultiRowsRadioGroup">

            <LinearLayout style="@style/LinearLayoutInRadioGroup">

                <RadioButton
                    android:id="@+id/radio_button_5_1"
                    style="@style/RadioButton_1"
                    android:onClick="onClickSingleChoice"
                    android:text="@string/answer_group_5_1" />

                <RadioButton
                    android:id="@+id/radio_button_5_2"
                    style="@style/RadioButton"
                    android:onClick="onClickSingleChoice"
                    android:text="@string/answer_group_5_2" />
            </LinearLayout>

            <LinearLayout style="@style/LinearLayoutInRadioGroup">

                <RadioButton
                    android:id="@+id/radio_button_5_3"
                    style="@style/RadioButton_1"
                    android:onClick="onClickSingleChoice"
                    android:text="@string/answer_group_5_3" />

                <RadioButton
                    android:id="@+id/radio_button_5_4"
                    style="@style/RadioButton"
                    android:onClick="onClickSingleChoice"
                    android:text="@string/answer_group_5_4" />
            </LinearLayout>
        </com.example.android.projectthree.MultiRowsRadioGroup>

        <!--The question_6 and radio_button answer group.-->
        <RelativeLayout style="@style/RelativeLayout">

            <ImageView
                android:id="@+id/question_6_wrong_icon"
                style="@style/WrongIcon"
                android:contentDescription="@string/icon_description" />

            <TextView
                android:id="@+id/question_6"
                style="@style/Question"
                android:layout_alignLeft="@id/question_6_wrong_icon"
                android:layout_alignStart="@id/question_6_wrong_icon"
                android:text="@string/question_6" />
        </RelativeLayout>

        <RadioGroup style="@style/SingleRowRadioGroup">

            <RadioButton
                android:id="@+id/radio_button_6_1"
                style="@style/RadioButton_1"
                android:onClick="onClickSingleChoice"
                android:text="@string/answer_group_6_1" />

            <RadioButton
                android:id="@+id/radio_button_6_2"
                style="@style/RadioButton"
                android:onClick="onClickSingleChoice"
                android:text="@string/answer_group_6_2" />

            <RadioButton
                android:id="@+id/radio_button_6_3"
                style="@style/RadioButton"
                android:onClick="onClickSingleChoice"
                android:text="@string/answer_group_6_3" />

            <RadioButton
                android:id="@+id/radio_button_6_4"
                style="@style/RadioButton"
                android:onClick="onClickSingleChoice"
                android:text="@string/answer_group_6_4" />
        </RadioGroup>

        <!--The question_7 and answer group.-->
        <RelativeLayout style="@style/RelativeLayout">

            <ImageView
                android:id="@+id/question_7_wrong_icon"
                style="@style/WrongIcon"
                android:contentDescription="@string/icon_description" />

            <TextView
                android:id="@+id/question_7"
                style="@style/Question"
                android:layout_alignLeft="@id/question_7_wrong_icon"
                android:layout_alignStart="@id/question_7_wrong_icon"
                android:text="@string/question_7" />
        </RelativeLayout>

        <com.example.android.projectthree.MultiRowsRadioGroup style="@style/MultiRowsRadioGroup">

            <LinearLayout style="@style/LinearLayoutInRadioGroup">

                <RadioButton
                    android:id="@+id/radio_button_7_1"
                    style="@style/RadioButton_1"
                    android:onClick="onClickSingleChoice"
                    android:text="@string/answer_group_7_1" />

                <RadioButton
                    android:id="@+id/radio_button_7_2"
                    style="@style/RadioButton"
                    android:onClick="onClickSingleChoice"
                    android:text="@string/answer_group_7_2" />
            </LinearLayout>

            <LinearLayout style="@style/LinearLayoutInRadioGroup">

                <RadioButton
                    android:id="@+id/radio_button_7_3"
                    style="@style/RadioButton_1"
                    android:onClick="onClickSingleChoice"
                    android:text="@string/answer_group_7_3" />

                <RadioButton
                    android:id="@+id/radio_button_7_4"
                    style="@style/RadioButton"
                    android:onClick="onClickSingleChoice"
                    android:text="@string/answer_group_7_4" />
            </LinearLayout>
        </com.example.android.projectthree.MultiRowsRadioGroup>

        <!--The topping of multiple choice.-->
        <TextView
            style="@style/Topping"
            android:text="@string/part_2_multiple_choice" />

        <!--The question_8 and checkbox answer group.-->
        <RelativeLayout style="@style/RelativeLayout">

            <ImageView
                android:id="@+id/question_8_wrong_icon"
                style="@style/WrongIcon"
                android:contentDescription="@string/icon_description" />

            <TextView
                android:id="@+id/question_8"
                style="@style/Question"
                android:layout_alignLeft="@id/question_8_wrong_icon"
                android:layout_alignStart="@id/question_8_wrong_icon"
                android:text="@string/question_8" />
        </RelativeLayout>

        <LinearLayout style="@style/MultiRowsRadioGroup">

            <LinearLayout style="@style/LinearLayoutInRadioGroup">

                <CheckBox
                    android:id="@+id/check_box_8_1"
                    style="@style/RadioButton_1"
                    android:onClick="onClickMultipleChoice"
                    android:text="@string/answer_group_8_1" />

                <CheckBox
                    android:id="@+id/check_box_8_2"
                    style="@style/RadioButton"
                    android:onClick="onClickMultipleChoice"
                    android:text="@string/answer_group_8_2" />
            </LinearLayout>

            <LinearLayout style="@style/LinearLayoutInRadioGroup">

                <CheckBox
                    android:id="@+id/check_box_8_3"
                    style="@style/RadioButton_1"
                    android:onClick="onClickMultipleChoice"
                    android:text="@string/answer_group_8_3" />

                <CheckBox
                    android:id="@+id/check_box_8_4"
                    style="@style/RadioButton"
                    android:onClick="onClickMultipleChoice"
                    android:text="@string/answer_group_8_4" />
            </LinearLayout>
        </LinearLayout>

        <!--The question_9 and checkbox answer group.-->
        <RelativeLayout style="@style/RelativeLayout">

            <ImageView
                android:id="@+id/question_9_wrong_icon"
                style="@style/WrongIcon"
                android:contentDescription="@string/icon_description" />

            <TextView
                android:id="@+id/question_9"
                style="@style/Question"
                android:layout_alignLeft="@id/question_9_wrong_icon"
                android:layout_alignStart="@id/question_9_wrong_icon"
                android:text="@string/question_9" />
        </RelativeLayout>

        <LinearLayout style="@style/MultiRowsRadioGroup">

            <LinearLayout style="@style/LinearLayoutInRadioGroup">

                <CheckBox
                    android:id="@+id/check_box_9_1"
                    style="@style/RadioButton_1"
                    android:onClick="onClickMultipleChoice"
                    android:text="@string/answer_group_9_1" />

                <CheckBox
                    android:id="@+id/check_box_9_2"
                    style="@style/RadioButton"
                    android:onClick="onClickMultipleChoice"
                    android:text="@string/answer_group_9_2" />
            </LinearLayout>

            <LinearLayout style="@style/LinearLayoutInRadioGroup">

                <CheckBox
                    android:id="@+id/check_box_9_3"
                    style="@style/RadioButton_1"
                    android:onClick="onClickMultipleChoice"
                    android:text="@string/answer_group_9_3" />

                <CheckBox
                    android:id="@+id/check_box_9_4"
                    style="@style/RadioButton"
                    android:onClick="onClickMultipleChoice"
                    android:text="@string/answer_group_9_4" />
            </LinearLayout>
        </LinearLayout>

        <!--The topping of fill in the blanks.-->
        <TextView
            style="@style/Topping"
            android:text="@string/part_3_fill_in_the_blanks" />

        <!--The question_10 and edit text of answer.-->
        <RelativeLayout style="@style/RelativeLayout">

            <ImageView
                android:id="@+id/question_10_wrong_icon"
                style="@style/WrongIcon"
                android:contentDescription="@string/icon_description" />

            <TextView
                android:id="@+id/question_10"
                style="@style/Question"
                android:layout_alignLeft="@id/question_10_wrong_icon"
                android:layout_alignStart="@id/question_10_wrong_icon"
                android:text="@string/question_10" />
        </RelativeLayout>

        <EditText
            android:id="@+id/edit_text_10_1"
            style="@style/EditText"
            android:hint="@string/edit_text_hint_answer_10" />

        <!--The submit button.-->
        <Button
            android:id="@+id/submit"
            style="@style/SubmitButton"
            android:onClick="onClickSubmit"
            android:text="@string/submit" />

        <!--The topping of result message,default is invisible-->
        <TextView
            android:id="@+id/totalScore"
            style="@style/Topping"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="6dp"
            android:textColor="@color/congratulations" />

        <!--Display Total Score and correct answers-->
        <TextView
            android:id="@+id/correct_answer"
            style="@style/CorrectAnswer"
            android:text="@string/the_correct_answer"
            android:visibility="invisible" />
    </LinearLayout>
</ScrollView>
